www/dev/_hero--refactor.scss
.hero-image__text {
  width: 50%;
  padding-top: 0.5em;

  .minor & {
    @include skinny-only {
      padding: 1px 0;
      background: rgba(68, 159, 55, 0.7);
      text-overflow: ellipsis;
      display: block;
      overflow: hidden;
      height: 50%;
    }
    
    @include mobile {
      padding: 3%;
      width: 100%;
      min-height: 8.5em;
    }
    
    @include phone_mobile {
      min-height: 0;
    }
  }
  
  p {
    @include mobile {
      -webkit-line-clamp: 1;
    }
    
    .minor & {
      @include skinny-only {
        padding: 3% 3% 0 3%;
        display: block; /* Fallback for non-webkit */
        display: -webkit-box;
        margin: 0 auto;
        line-height: 1.4;
        -webkit-line-clamp: 2;
        -webkit-box-orient: vertical;
        overflow: hidden;
        text-overflow: ellipsis;
      }
      
      @include mobile {
        display: block; /* Fallback for non-webkit */
        display: -webkit-box;
        -webkit-line-clamp: 2;
        -webkit-box-orient: vertical;
        overflow: hidden;
        text-overflow: ellipsis;
      }
    }
  }

  h1 {
    color: white;
    margin-bottom: 0;
    
    .minor & {
      @include skinny-only {
      
      }
    }
  }
  
  h2 {
    color: white;
    margin-bottom: 0;
    line-height: 1;
    
    .minor & {
      @include skinny-only {
        padding: 3%;
        display: block; /* Fallback for non-webkit */
        display: -webkit-box;
        -webkit-line-clamp: 2;
        -webkit-box-orient: vertical;
        overflow: hidden;
        text-overflow: ellipsis;
        font-size: 1.4em;
      }
    }
  }

}

.hero-container--gallery-3 .hero-image--primary {
  @include skinny-only {
    width: 100%;
    max-height: 70vh;
  }
  
  @include mobile {
    width: 100%;
  }
}

.hero-image.minor {
  @include skinny-only {
    width: 50%;
  }
  
  @include mobile {
    width: 50%;  
 }
 
  @include phone_mobile {
    width: 100%;
    padding: 0;
  }
}

.hero-image {
  &.sub {
    border-top: 0;
  }
  
  .minor & {
    display: none;
  }
}

.hero-image__container {
  @include mobile {
    position: static;
  }

  .minor & {
    @include mobile {
      display: none;
    }
  }
}

/* misnamed - this is the hero image text for the large image in the 3up */
.left_text{
  right: 0;
  bottom: 50%;
  width: 40%;
  
  @include mobile {
    width: 100%;
    bottom: 0;
    padding: 3%;
    clear: both;
  }
}

